Added Content and Images into site

--- a/product1.html
+++ b/product1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Premium Smartphone - Product 1</title>
     <link rel="stylesheet" href="css/stylesheet.CSS">
 </head>
 <body>
@@ -11,34 +11,32 @@
         <nav>
             <a href="index.html" class="logo"><img src="" alt=""></a>
             <ul>
-                <li><a href="index.html"></a></li>
-                <li><a href="about.html"></a></li>
-                <li><a href="shopping-cart.html"></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
         <div class="masthead">
-            <h1></h1>
-            <p></p>
+            <h1>Premium Smartphone</h1>
+            <p>Experience cutting-edge technology in the palm of your hand</p>
         </div>
     </header>
 
     <main role="main">
         <section class="product-details">
+            <img src="images/iphone.png" alt="Premium Smartphone">
             <div class="text-wrapper">
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <p class="price"></p>
-                <form action="shopping-cart.html" method="post">
-                    <input type="hidden" name="product" value="">
-                    <button type="submit" class="buy-now-btn"></button>
-                </form>
+                <h2>Premium Smartphone</h2>
+                <p>The latest flagship smartphone featuring a stunning 6.7-inch OLED display, advanced triple-camera system with 108MP main sensor, and lightning-fast 5G connectivity. Powered by the latest processor with 12GB RAM and 256GB storage.</p>
+                <p>Features include wireless charging, water resistance, face recognition, fingerprint sensor, and all-day battery life. Available in Midnight Black, Ocean Blue, and Rose Gold.</p>
+                <p class="price">$899.99</p>
+                <p><a href="cart.html" class="buy-now-btn">Add to Cart</a></p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p></p>
+        <p>&copy; 2025 TechStore. All rights reserved.</p>
     </footer>
 </body>
 </html>
