--- a/product2.html
+++ b/product2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Professional Laptop - Product 2</title>
     <link rel="stylesheet" href="css/stylesheet.CSS">
 </head>
 <body>
@@ -11,34 +11,32 @@
         <nav>
             <a href="index.html" class="logo"><img src="" alt=""></a>
             <ul>
-                <li><a href="index.html"></a></li>
-                <li><a href="about.html"></a></li>
-                <li><a href="shopping-cart.html"></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
         <div class="masthead">
-            <h1></h1>
-            <p></p>
+            <h1>Professional Laptop</h1>
+            <p>Power and portability for the modern professional</p>
         </div>
     </header>
 
     <main role="main">
         <section class="product-details">
+            <img src="images/laptop.png" alt="Professional Laptop">
             <div class="text-wrapper">
-                <h2></h2>
-                <p></p>
-                <p></p>
-                <p class="price"></p>
-                <form action="shopping-cart.html" method="post">
-                    <input type="hidden" name="product" value="">
-                    <button type="submit" class="buy-now-btn"></button>
-                </form>
+                <h2>Professional Laptop</h2>
+                <p>High-performance laptop designed for professionals and creatives. Features a 15.6-inch 4K display, Intel Core i7 processor, 16GB RAM, and 1TB SSD. Perfect for video editing, graphic design, programming, and multitasking.</p>
+                <p>Includes backlit keyboard, premium aluminum chassis, Thunderbolt 4 ports, Wi-Fi 6, and up to 12 hours of battery life. Weighs just 3.5 lbs for ultimate portability.</p>
+                <p class="price">$1,499.99</p>
+                <p><a href="cart.html" class="buy-now-btn">Add to Cart</a></p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p></p>
+        <p>&copy; 2025 TechStore. All rights reserved.</p>
     </footer>
 </body>
 </html>
