--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>TechStore - Premium Electronics</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
@@ -17,8 +17,8 @@
 			</ul>
 		</nav>
 		<div class="masthead">
-			<h1></h1>
-			<p></p>
+			<h1>Welcome to TechStore</h1>
+			<p>Your destination for premium electronics and cutting-edge technology</p>
 		</div>
 	</header>
 
@@ -26,36 +26,39 @@
 	<main role="main" class="price-list">
 		<section class="primary">
 			<p class="popular">Most Popular</p>
+			<img src="images/iphone.png" alt="Premium Smartphone">
 			<div class="text-wrapper">
-				<h2></h2>
-				<p></p>
-				<p></p>
-				<p class="price"></p>
+				<h2>Premium Smartphone</h2>
+				<p>Experience cutting-edge technology in the palm of your hand</p>
+				<p>6.7-inch OLED display, 108MP camera, 5G connectivity</p>
+				<p class="price">$899.99</p>
 				<p class="cta"><a href="product1.html" class="buy-now-btn">Buy Now</a></p>
 			</div>
 		</section>
 		<section class="secondary">
+			<img src="images/laptop.png" alt="Professional Laptop">
 			<div class="text-wrapper">
-				<h2></h2>
-                <p></p>
-                <p></p>
-                <p class="price"></p>
+				<h2>Professional Laptop</h2>
+                <p>Power and portability for the modern professional</p>
+                <p>15.6-inch 4K display, Core i7, 16GB RAM, 1TB SSD</p>
+                <p class="price">$1,499.99</p>
 				<p class="cta"><a href="product2.html" class="buy-now-btn">Buy Now</a></p>
 			</div>
 		</section>
 		<section>
+			<img src="images/computer.png" alt="Ultimate Gaming Computer">
 			<div class="text-wrapper">
-				<h2></h2>
-                <p></p>
-                <p></p>
-                <p class="price"></p>
+				<h2>Ultimate Gaming Computer</h2>
+                <p>Unleash maximum performance for the ultimate gaming experience</p>
+                <p>RTX 4090, Core i9, 32GB RAM, 2TB SSD</p>
+                <p class="price">$3,299.99</p>
 				<p class="cta"><a href="product3.html" class="buy-now-btn">Buy Now</a></p>
 			</div>
 		</section>
 	</main>
 
 	<footer>
-		Copyright © 
+		Copyright © 2025 TechStore. All rights reserved.
 	</footer>
 </body>
 </html>
