created css file and styles html and content of index.html product1.htm product2.html product3.html and cart.html

--- a/cart.html
+++ b/cart.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shopping Cart - TechStore</title>
-    <link rel="stylesheet" href="css/stylesheet.CSS">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="logo"><img src="img/EDR.png" alt=""></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-        </nav>
-        <div class="masthead">
+		<nav class="padding-bottom">
+			
+			<ul class="flex-box">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="product1.html">Product 1</a></li>
+				<li><a href="product2.html">Product 2</a></li>
+				<li><a href="product3.html">Product 3</a></li>
+				<li><a href="cart.html">Cart</a></li>
+			</ul>
+		</nav>
+        <div class="masthead text-center">
             <h1>Shopping Cart</h1>
             <p>Complete your purchase and enjoy your new tech products</p>
         </div>
     </header>
 
     <main role="main">
-        <section class="checkout-form">
+        <section class="checkout-form text-center">
             <h2>Checkout</h2><br>
 
             <form action="#" method="post" id="checkout-form">
@@ -54,8 +56,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 TechStore. All rights reserved.</p>
+    <footer class="text-center">
+        Copyright © 2025 TechStore. All rights reserved.
     </footer>
 </body>
 </html>
