--- a/product1.html
+++ b/product1.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Premium Smartphone - Product 1</title>
-    <link rel="stylesheet" href="css/stylesheet.CSS">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="logo"><img src="" alt=""></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-        </nav>
-        <div class="masthead">
+		<nav class="padding-bottom">
+			
+			<ul class="flex-box">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="product1.html">Product 1</a></li>
+				<li><a href="product2.html">Product 2</a></li>
+				<li><a href="product3.html">Product 3</a></li>
+				<li><a href="cart.html">Cart</a></li>
+			</ul>
+		</nav>
+        <div class="masthead text-center">
             <h1>Premium Smartphone</h1>
             <p>Experience cutting-edge technology in the palm of your hand</p>
         </div>
     </header>
 
     <main role="main">
-        <section class="product-details">
+        <section class="product-details text-center padding-bottom">
             <img src="images/iphone.png" alt="Premium Smartphone">
             <div class="text-wrapper">
                 <h2>Premium Smartphone</h2>
                 <p>The latest flagship smartphone featuring a stunning 6.7-inch OLED display, advanced triple-camera system with 108MP main sensor, and lightning-fast 5G connectivity. Powered by the latest processor with 12GB RAM and 256GB storage.</p>
                 <p>Features include wireless charging, water resistance, face recognition, fingerprint sensor, and all-day battery life. Available in Midnight Black, Ocean Blue, and Rose Gold.</p>
-                <p class="price">$899.99</p>
+                <p class="price padding-bottom">$899.99</p>
                 <p><a href="cart.html" class="buy-now-btn">Add to Cart</a></p>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="text-center">
         <p>&copy; 2025 TechStore. All rights reserved.</p>
     </footer>
 </body>
