--- a/product2.html
+++ b/product2.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Professional Laptop - Product 2</title>
-    <link rel="stylesheet" href="css/stylesheet.CSS">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="logo"><img src="" alt=""></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-        </nav>
-        <div class="masthead">
+		<nav class="padding-bottom">
+			
+			<ul class="flex-box">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="product1.html">Product 1</a></li>
+				<li><a href="product2.html">Product 2</a></li>
+				<li><a href="product3.html">Product 3</a></li>
+				<li><a href="cart.html">Cart</a></li>
+			</ul>
+		</nav>
+        <div class="masthead text-center">
             <h1>Professional Laptop</h1>
             <p>Power and portability for the modern professional</p>
         </div>
     </header>
 
     <main role="main">
-        <section class="product-details">
-            <img src="images/laptop.png" alt="Professional Laptop">
+        <section class="product-details text-center padding-bottom">
+            <img src="images/laptop.png" alt="Professional Laptop" class="scale-img">
             <div class="text-wrapper">
                 <h2>Professional Laptop</h2>
                 <p>High-performance laptop designed for professionals and creatives. Features a 15.6-inch 4K display, Intel Core i7 processor, 16GB RAM, and 1TB SSD. Perfect for video editing, graphic design, programming, and multitasking.</p>
                 <p>Includes backlit keyboard, premium aluminum chassis, Thunderbolt 4 ports, Wi-Fi 6, and up to 12 hours of battery life. Weighs just 3.5 lbs for ultimate portability.</p>
-                <p class="price">$1,499.99</p>
+                <p class="price padding-bottom">$1,499.99</p>
                 <p><a href="cart.html" class="buy-now-btn">Add to Cart</a></p>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="text-center">
         <p>&copy; 2025 TechStore. All rights reserved.</p>
     </footer>
 </body>
