--- a/product3.html
+++ b/product3.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ultimate Gaming Computer - Product 3</title>
-    <link rel="stylesheet" href="css/stylesheet.CSS">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html" class="logo"><img src="" alt=""></a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cart.html">Cart</a></li>
-            </ul>
-        </nav>
-        <div class="masthead">
+		<nav class="padding-bottom">
+			
+			<ul class="flex-box">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="product1.html">Product 1</a></li>
+				<li><a href="product2.html">Product 2</a></li>
+				<li><a href="product3.html">Product 3</a></li>
+				<li><a href="cart.html">Cart</a></li>
+			</ul>
+		</nav>
+        <div class="masthead text-center">
             <h1>Ultimate Gaming Computer</h1>
             <p>Unleash maximum performance for the ultimate gaming experience</p>
         </div>
     </header>
 
     <main role="main">
-        <section class="product-details">
-            <img src="images/computer.png" alt="Ultimate Gaming Computer">
+        <section class="product-details text-center padding-bottom">
+            <img src="images/computer.png" alt="Ultimate Gaming Computer" class="scale-img">
             <div class="text-wrapper">
                 <h2>Ultimate Gaming Computer</h2>
                 <p>Extreme gaming powerhouse featuring NVIDIA GeForce RTX 4090 graphics card, Intel Core i9-13900K processor, 32GB DDR5 RAM, and 2TB NVMe SSD. Handles the most demanding AAA games at maximum settings with ray tracing enabled.</p>
                 <p>Includes RGB liquid cooling system, tempered glass case with customizable lighting, 850W power supply, and pre-installed Windows 11. Ready for 4K gaming, VR, and content creation.</p>
-                <p class="price">$3,299.99</p>
+                <p class="price padding-bottom">$3,299.99</p>
                 <p><a href="cart.html" class="buy-now-btn">Add to Cart</a></p>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="text-center">
         <p>&copy; 2025 TechStore. All rights reserved.</p>
     </footer>
 </body>
